--- a/index.html
+++ b/index.html
@@ -61,5 +61,9 @@
     </div>    
 
     <script src="script.js"></script>
+    <div class="bottom-bar">
+        Designed by curious_droid for the LAHS Math Club
+    </div>
+    
 </body>
 </html>
